@@ -3,4 +3,6 @@
 - netfapx - fix listing
 - camsoda - fix thumbnails
 - wizzgirl - removed as site is dead
-- thepornfull - domain change
+- thepornfull - fix domain
+- tubxporn - fix domain & playback
+- tabootube - fix listing
